# sonic-sairedis

./: BUILD  MODULE.bazel
lib/: BUILD
meta/: BUILD
saiasiccmp/: BUILD
saidiscovery/: BUILD
saidump/: BUILD
saiplayer/: BUILD
saisdkdump/: BUILD
syncd/: BUILD  dummy_sai.c
tests/: BUILD
unittest/lib/: BUILD
unittest/meta/: BUILD
unittest/syncd/: BUILD
unittest/vslib/: BUILD
vslib/: BUILD
